# docker-gui

./: .dockerignore  .gitignore  Dockerfile  README.md  check_deps.py  docker_api.py  docker_gui.py  main.py  pyproject.toml  run.sh
appimage/: AppRun  README.md  build.sh  create_icon.py  docker-gui.desktop
core/: __init__.py  base_operations.py  resource_manager.py  resource_view.py
resources/: __init__.py  containers.py  images.py  networks.py  volumes.py
services/: __init__.py  docker_service.py  memory_service.py  notification_service.py
tests/: conftest.py
tests/e2e/: test_user_flows.py
tests/fixtures/: mock_data.py
tests/integration/: test_gui_components.py
tests/unit/: test_dependencies.py  test_docker_api.py
ui/components/: __init__.py  card.py  containers_view.py  dashboard.py  images_view.py  loading_indicator.py  networks_view.py  notifications.py  search.py  status_bar.py  status_card.py  virtual_list.py  volumes_view.py
ui/themes/: __init__.py  dark_theme.py  light_theme.py  theme_manager.py
